✨ Add correct answers count

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </div>
   </template>
 
+  <div id="certas">
+    <strong>Respostas certas</strong>
+    <span>0 de 10</span>
+  </div>
+
   <script src="./index.js"></script>
 </body>
 
