--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
 </head>
 
 <body>
-  <h1>Testa os teus conhecimentos</h1>
+  <main>
+    <h1>Testa os teus conhecimentos</h1>
 
-  <div id="quiz"></div>
-  <template>
-    <div class="quiz-item">
-      <h3>
-        Pergunta 01
-      </h3>
-      <dl>
-        <dt>
-          <input type="radio" name="item" value="0">
-          <span>
-            Resposta A
-          </span>
-        </dt>
-      </dl>
+    <div id="quiz"></div>
+    <template>
+      <div class="quiz-item">
+        <h3>
+          Pergunta 01
+        </h3>
+        <dl>
+          <dt>
+            <input type="radio" name="item" value="0">
+            <span>
+              Resposta A
+            </span>
+          </dt>
+        </dl>
+      </div>
+    </template>
+
+    <div id="certas">
+      <strong>Respostas certas</strong>
+      <span>0 de 10</span>
     </div>
-  </template>
 
-  <div id="certas">
-    <strong>Respostas certas</strong>
-    <span>0 de 10</span>
-  </div>
-
-  <script src="./index.js"></script>
+    <script src="./index.js"></script>
+  </main>
 </body>
 
 </html>
