--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <main>
-    <h1>Testa os teus conhecimentos</h1>
+    <header>
+      <h1>Testa os teus conhecimentos</h1>
+    </header>
 
     <div id="quiz"></div>
     <template>
